@@ -50,9 +50,11 @@ import org.apache.nifi.context.PropertyContext;
 import org.apache.nifi.controller.AbstractControllerService;
 import org.apache.nifi.controller.ConfigurationContext;
 import org.apache.nifi.expression.ExpressionLanguageScope;
+import org.apache.nifi.migration.PropertyConfiguration;
 import org.apache.nifi.processor.util.StandardValidators;
 import org.apache.nifi.schema.access.SchemaField;
 import org.apache.nifi.schema.access.SchemaNotFoundException;
+import org.apache.nifi.schemaregistry.services.SchemaDefinition;
 import org.apache.nifi.schemaregistry.services.SchemaRegistry;
 import org.apache.nifi.serialization.record.RecordSchema;
 import org.apache.nifi.serialization.record.SchemaIdentifier;
@@ -73,8 +75,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
 
 
     static final PropertyDescriptor SCHEMA_REGISTRY_URLS = new PropertyDescriptor.Builder()
-        .name("url")
-        .displayName("Schema Registry URLs")
+        .name("Schema Registry URLs")
         .description("A comma-separated list of URLs of the Schema Registry to interact with")
         .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
         .defaultValue("http://localhost:8081")
@@ -83,16 +84,14 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
         .build();
 
     static final PropertyDescriptor SSL_CONTEXT = new PropertyDescriptor.Builder()
-        .name("ssl-context")
-        .displayName("SSL Context Service")
+        .name("SSL Context Service")
         .description("Specifies the SSL Context Service to use for interacting with the Confluent Schema Registry")
         .identifiesControllerService(SSLContextProvider.class)
         .required(false)
         .build();
 
     static final PropertyDescriptor CACHE_SIZE = new PropertyDescriptor.Builder()
-        .name("cache-size")
-        .displayName("Cache Size")
+        .name("Cache Size")
         .description("Specifies how many Schemas should be cached from the Schema Registry")
         .addValidator(StandardValidators.NON_NEGATIVE_INTEGER_VALIDATOR)
         .defaultValue("1000")
@@ -100,8 +99,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
         .build();
 
     static final PropertyDescriptor CACHE_EXPIRATION = new PropertyDescriptor.Builder()
-        .name("cache-expiration")
-        .displayName("Cache Expiration")
+        .name("Cache Expiration")
         .description("Specifies how long a Schema that is cached should remain in the cache. Once this time period elapses, a "
             + "cached version of a schema will no longer be used, and the service will have to communicate with the "
             + "Schema Registry again in order to obtain the schema.")
@@ -111,8 +109,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
         .build();
 
     static final PropertyDescriptor TIMEOUT = new PropertyDescriptor.Builder()
-        .name("timeout")
-        .displayName("Communications Timeout")
+        .name("Communications Timeout")
         .description("Specifies how long to wait to receive data from the Schema Registry before considering the communications a failure")
         .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
         .expressionLanguageSupported(ExpressionLanguageScope.NONE)
@@ -121,8 +118,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
         .build();
 
     static final PropertyDescriptor AUTHENTICATION_TYPE = new PropertyDescriptor.Builder()
-            .name("authentication-type")
-            .displayName("Authentication Type")
+            .name("Authentication Type")
             .description("HTTP Client Authentication Type for Confluent Schema Registry")
             .required(false)
             .allowableValues(AuthenticationType.values())
@@ -130,8 +126,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
             .build();
 
     static final PropertyDescriptor USERNAME = new PropertyDescriptor.Builder()
-            .name("username")
-            .displayName("Username")
+            .name("Username")
             .description("Username for authentication to Confluent Schema Registry")
             .addValidator(StandardValidators.createRegexMatchingValidator(Pattern.compile("^[\\x20-\\x39\\x3b-\\x7e\\x80-\\xff]+$")))
             .required(false)
@@ -139,8 +134,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
             .build();
 
     static final PropertyDescriptor PASSWORD = new PropertyDescriptor.Builder()
-            .name("password")
-            .displayName("Password")
+            .name("Password")
             .description("Password for authentication to Confluent Schema Registry")
             .addValidator(StandardValidators.createRegexMatchingValidator(Pattern.compile("^[\\x20-\\x7e\\x80-\\xff]+$")))
             .required(false)
@@ -215,7 +209,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
                 sslContext, username, password, getLogger(), httpHeaders);
 
         final int cacheSize = context.getProperty(CACHE_SIZE).asInteger();
-        final long cacheExpiration = context.getProperty(CACHE_EXPIRATION).asTimePeriod(TimeUnit.NANOSECONDS).longValue();
+        final long cacheExpiration = context.getProperty(CACHE_EXPIRATION).asTimePeriod(TimeUnit.NANOSECONDS);
 
         client = new CachingSchemaRegistryClient(restClient, cacheSize, cacheExpiration);
     }
@@ -229,12 +223,12 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
             final List<String> baseUrls = getBaseURLs(validationContext);
             final List<String> insecure = baseUrls.stream()
                 .filter(url -> !url.startsWith("https"))
-                .collect(Collectors.toList());
+                .toList();
 
             if (!insecure.isEmpty()) {
                 results.add(new ValidationResult.Builder()
                     .subject(SCHEMA_REGISTRY_URLS.getDisplayName())
-                    .input(insecure.get(0))
+                    .input(insecure.getFirst())
                     .valid(false)
                     .explanation("When SSL Context is configured, all Schema Registry URL's must use HTTPS, not HTTP")
                     .build());
@@ -270,7 +264,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
     private List<String> getBaseURLs(final PropertyContext context) {
         final String urls = context.getProperty(SCHEMA_REGISTRY_URLS).evaluateAttributeExpressions().getValue();
         final List<String> baseUrls = Stream.of(urls.split(","))
-            .map(url -> url.trim())
+            .map(String::trim)
             .collect(Collectors.toList());
 
         return baseUrls;
@@ -278,7 +272,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
 
     private RecordSchema retrieveSchemaByName(final SchemaIdentifier schemaIdentifier) throws IOException, SchemaNotFoundException {
         final Optional<String> schemaName = schemaIdentifier.getName();
-        if (!schemaName.isPresent()) {
+        if (schemaName.isEmpty()) {
             throw new org.apache.nifi.schema.access.SchemaNotFoundException("Cannot retrieve schema because Schema Name is not present");
         }
 
@@ -294,7 +288,7 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
 
     private RecordSchema retrieveSchemaById(final SchemaIdentifier schemaIdentifier) throws IOException, SchemaNotFoundException {
         final OptionalLong schemaId = schemaIdentifier.getSchemaVersionId();
-        if (!schemaId.isPresent()) {
+        if (schemaId.isEmpty()) {
             throw new org.apache.nifi.schema.access.SchemaNotFoundException("Cannot retrieve schema because Schema Id is not present");
         }
 
@@ -314,5 +308,27 @@ public class ConfluentSchemaRegistry extends AbstractControllerService implement
     @Override
     public Set<SchemaField> getSuppliedSchemaFields() {
         return schemaFields;
+    }
+
+    @Override
+    public boolean isSchemaDefinitionAccessSupported() {
+        return true;
+    }
+
+    @Override
+    public SchemaDefinition retrieveSchemaDefinition(final SchemaIdentifier schemaIdentifier) throws IOException, SchemaNotFoundException {
+        return client.getSchemaDefinition(schemaIdentifier);
+    }
+
+    @Override
+    public void migrateProperties(PropertyConfiguration config) {
+        config.renameProperty("url", SCHEMA_REGISTRY_URLS.getName());
+        config.renameProperty("ssl-context", SSL_CONTEXT.getName());
+        config.renameProperty("cache-size", CACHE_SIZE.getName());
+        config.renameProperty("cache-expiration", CACHE_EXPIRATION.getName());
+        config.renameProperty("timeout", TIMEOUT.getName());
+        config.renameProperty("authentication-type", AUTHENTICATION_TYPE.getName());
+        config.renameProperty("username", USERNAME.getName());
+        config.renameProperty("password", PASSWORD.getName());
     }
 }
