@@ -19,6 +19,7 @@ package org.apache.nifi.processors.attributes;
 import com.github.benmanes.caffeine.cache.Caffeine;
 import com.github.benmanes.caffeine.cache.LoadingCache;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.nifi.annotation.behavior.DefaultRunDuration;
 import org.apache.nifi.annotation.behavior.DynamicProperty;
 import org.apache.nifi.annotation.behavior.InputRequirement;
@@ -193,7 +194,6 @@ public class UpdateAttribute extends AbstractProcessor implements Searchable {
     public static final String DELETE_ATTRIBUTES_EXPRESSION_NAME = "Delete Attributes Expression";
     public static final PropertyDescriptor DELETE_ATTRIBUTES = new PropertyDescriptor.Builder()
             .name(DELETE_ATTRIBUTES_EXPRESSION_NAME)
-            .displayName(DELETE_ATTRIBUTES_EXPRESSION_NAME)
             .description("Regular expression for attributes to be deleted from FlowFiles.  Existing attributes that match will be deleted regardless of whether they are updated by this processor.")
             .required(false)
             .addValidator(DELETE_PROPERTY_VALIDATOR)
@@ -203,7 +203,6 @@ public class UpdateAttribute extends AbstractProcessor implements Searchable {
     public static final String STORE_STATE_NAME = "Store State";
     public static final PropertyDescriptor STORE_STATE = new PropertyDescriptor.Builder()
             .name(STORE_STATE_NAME)
-            .displayName(STORE_STATE_NAME)
             .description("Select whether or not state will be stored. Selecting 'Stateless' will offer the default functionality of purely updating the attributes on a " +
                     "FlowFile in a stateless manner. Selecting a stateful option will not only store the attributes on the FlowFile but also in the Processors " +
                     "state. See the 'Stateful Usage' topic of the 'Additional Details' section of this processor's documentation for more information")
@@ -215,7 +214,6 @@ public class UpdateAttribute extends AbstractProcessor implements Searchable {
     public static final String STATEFUL_VARIABLES_INIT_VALUE_NAME = "Stateful Variables Initial Value";
     public static final PropertyDescriptor STATEFUL_VARIABLES_INIT_VALUE = new PropertyDescriptor.Builder()
             .name(STATEFUL_VARIABLES_INIT_VALUE_NAME)
-            .displayName(STATEFUL_VARIABLES_INIT_VALUE_NAME)
             .description("If using state to set/reference variables then this value is used to set the initial value of the stateful variable. This will only be used in the @OnScheduled method " +
                     "when state does not contain a value for the variable. This is required if running statefully but can be empty if needed.")
             .required(false)
@@ -362,7 +360,7 @@ public class UpdateAttribute extends AbstractProcessor implements Searchable {
             } else {
                 // validate the each rule
                 for (final Rule rule : rules) {
-                    if (rule.getName() == null || rule.getName().trim().isEmpty()) {
+                    if (rule.getName() == null || rule.getName().isBlank()) {
                         reasons.add(new ValidationResult.Builder().valid(false).explanation("A rule name was not specified.").build());
                     }
 
@@ -422,19 +420,19 @@ public class UpdateAttribute extends AbstractProcessor implements Searchable {
             // ensure there are some rules
             if (criteria.getRules() != null) {
                 final FlowFilePolicy flowFilePolicy = criteria.getFlowFilePolicy();
-                if (flowFilePolicy != null && StringUtils.containsIgnoreCase(flowFilePolicy.name(), term)) {
+                if (flowFilePolicy != null && Strings.CI.contains(flowFilePolicy.name(), term)) {
                     results.add(new SearchResult.Builder().label("FlowFile policy").match(flowFilePolicy.name()).build());
                 }
 
                 for (final Rule rule : criteria.getRules()) {
-                    if (StringUtils.containsIgnoreCase(rule.getName(), term)) {
+                    if (Strings.CI.contains(rule.getName(), term)) {
                         results.add(new SearchResult.Builder().label("Rule name").match(rule.getName()).build());
                     }
 
                     // ensure there are some conditions
                     if (rule.getConditions() != null) {
                         for (final Condition condition : rule.getConditions()) {
-                            if (StringUtils.containsIgnoreCase(condition.getExpression(), term)) {
+                            if (Strings.CI.contains(condition.getExpression(), term)) {
                                 results.add(new SearchResult.Builder().label(String.format("Condition in rule '%s'", rule.getName())).match(condition.getExpression()).build());
                             }
                         }
@@ -443,10 +441,10 @@ public class UpdateAttribute extends AbstractProcessor implements Searchable {
                     // ensure there are some actions
                     if (rule.getActions() != null) {
                         for (final Action action : rule.getActions()) {
-                            if (StringUtils.containsIgnoreCase(action.getAttribute(), term)) {
+                            if (Strings.CI.contains(action.getAttribute(), term)) {
                                 results.add(new SearchResult.Builder().label(String.format("Action in rule '%s'", rule.getName())).match(action.getAttribute()).build());
                             }
-                            if (StringUtils.containsIgnoreCase(action.getValue(), term)) {
+                            if (Strings.CI.contains(action.getValue(), term)) {
                                 results.add(new SearchResult.Builder().label(String.format("Action in rule '%s'", rule.getName())).match(action.getValue()).build());
                             }
                         }
